--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@ capybara-*.html
 *.orig
 rerun.txt
 pickle-email-*.html
-.keep
 
 # TODO Comment out this rule if you are OK with secrets being uploaded to the repo
 config/initializers/secret_token.rb
@@ -43,3 +42,4 @@ bower.json
 
 # Ignore Byebug command history file.
 .byebug_history
+test/fixtures/files/.keep
