User production in docker

--- a/config/database.yml
+++ b/config/database.yml
@@ -84,5 +84,6 @@ test:
 production:
   <<: *default
   database: kmigrate_production
+  host: postgres
   username: kmigrate
   password: <%= ENV['KMIGRATE_DATABASE_PASSWORD'] %>
