--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     - .:/kmigrate
     links:
     - postgres
-    command: bash -c "export SECRET_KEY_BASE=`rake secret` && rm /kmigrate/tmp/pids/server.pid && rake db:create && rake db:migrate && rails assets:precompile && bundle exec rails s"
+    command: bash -c "export SECRET_KEY_BASE=`rake secret` && rake db:create && rake db:migrate && rails assets:precompile && bundle exec rails s"
     environment:
       - RAILS_ENV=production
       - KMIGRATE_DATABASE_PASSWORD=zW/F,![@9rA(9:,H
