--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,7 @@ bower.json
 .byebug_history
 test/fixtures/files/.keep
 kkmigrate/
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
