--- a/config/database.yml
+++ b/config/database.yml
@@ -18,11 +18,12 @@ default: &default
   adapter: postgresql
   encoding: unicode
   host: 0.0.0.0
-  password:
+  port: 5432
+  password: zW/F,![@9rA(9:,H
   # For details on connection pooling, see Rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: postgres
+  username: kmigrate
 
 development:
   <<: *default
